--- a/src/main/webapp/views/ComparativoTiempoDeVidaUtil/List.xhtml
+++ b/src/main/webapp/views/ComparativoTiempoDeVidaUtil/List.xhtml
@@ -10,11 +10,11 @@
 
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <h2 align="center">Comparativo de Tiempo de Vida Util Entre los Diferentes Equipos</h2>
+
     <h:form id="form">
         <div align="center" style="border: 1px black solid">
+            <h2 align="center">Comparativo de Tiempo de Vida Util Entre los Diferentes Equipos</h2>
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-
 
             <p:panelGrid  columns="2" columnClasses="column">
                 <p:column>
@@ -32,7 +32,6 @@
             <p:growl id="msgs" showDetail="true" />
             <br/> <br/>
 
-
             <h:panelGrid columns="4" cellpadding="5">
 
                 <p:column>
@@ -40,6 +39,7 @@
                 </p:column>
                 <p:column>
                     <p:selectOneMenu id="equipo" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                        <f:selectItem itemLabel="Seleccione equipo x" />
                         <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
@@ -48,6 +48,7 @@
                 </p:column>
                 <p:column>
                     <p:selectOneMenu id="equipodos" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                        <f:selectItem itemLabel="Seleccione equipo y" />
                         <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
@@ -55,20 +56,17 @@
             <br/> <br/>
 
 
-            <br/><br/>
-            <p:commandButton value="Aceptar" update="msgs" actionListener="#{comparativoDeTiempoVidaUtilManagedBean.click}" icon="ui-icon-check"  />
-            <br/><br/>
-
+            <h:panelGrid columns="2"  cellpadding="5">
+                <f:facet name="footer">
+                    <div class="footer-section">
+                        <p:commandButton value="Aceptar" update="msgs" actionListener="#{comparativoDeTiempoVidaUtilManagedBean.click}" icon="ui-icon-check"  />                        
+                        <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                        <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                    </div>
+                </f:facet>
+            </h:panelGrid>
         </div>
 
-        <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
-                <h:outputText value="Event:" />
-                <h:outputText value="#{indiceDeEncarrilamientoManagedBean.date2}">
-                    <f:convertDateTime pattern="MM/dd/yyyy" />
-                </h:outputText>
-            </p:panelGrid>
-        </p:dialog>
     </h:form>
 
 </ui:composition>
