--- a/src/main/webapp/views/comparativodegastosreparacion/List.xhtml
+++ b/src/main/webapp/views/comparativodegastosreparacion/List.xhtml
@@ -10,9 +10,10 @@
 
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <h1>Comparativo de Gastos en Reparacion entre Diferentes Equipos en un Periodos de Tiempo</h1>
+
     <h:form id="form">
         <div align="center" style="border: 1px black solid">
+            <h2 align="center">Comparativo de Gastos en Reparacion entre Diferentes Equipos en un Periodos de Tiempo</h2>
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
 
 
@@ -39,7 +40,7 @@
                 </p:column>
                 <p:column>
                     <p:selectOneMenu id="area" value="#{comparativoDeGastosReparacionManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
-                        <f:selectItem itemLabel="Seleccione" />
+                        <f:selectItem itemLabel="Seleccione Area Hospitalaria" />
                         <f:selectItems value="#{comparativoDeGastosReparacionManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
                     </p:selectOneMenu>
                 </p:column>
@@ -49,7 +50,7 @@
                 </p:column>
                 <p:column>
                     <p:selectOneMenu id="equipox" value="#{comparativoDeGastosReparacionManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
-                        <f:selectItem itemLabel="Seleccione" />
+                        <f:selectItem itemLabel="Seleccione equipo x" />
                         <f:selectItems value="#{comparativoDeGastosReparacionManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
@@ -58,7 +59,7 @@
                 </p:column>
                 <p:column>
                     <p:selectOneMenu id="equipoy" value="#{comparativoDeGastosReparacionManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
-                        <f:selectItem itemLabel="Seleccione" />
+                        <f:selectItem itemLabel="Seleccione equipo y" />
                         <f:selectItems value="#{comparativoDeGastosReparacionManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                     </p:selectOneMenu>
                 </p:column>
@@ -82,21 +83,19 @@
             </h:panelGrid>
             <br/> <br/>
 
-
-            <br/><br/>
-            <p:commandButton value="Aceptar" update="msgs" actionListener="#{comparativoDeGastosReparacionManagedBean.click}" icon="ui-icon-check"  />
-            <br/><br/>
+            <h:panelGrid columns="2"  cellpadding="5">
+                <f:facet name="footer">
+                    <div class="footer-section">
+                        <p:commandButton value="Aceptar" update="msgs" actionListener="#{comparativoDeGastosReparacionManagedBean.click}" icon="ui-icon-check"  />                        
+                        <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                        <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                    </div>
+                </f:facet>
+            </h:panelGrid>
 
         </div>
 
-        <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
-                <h:outputText value="Event:" />
-                <h:outputText value="#{indiceDeEncarrilamientoManagedBean.date2}">
-                    <f:convertDateTime pattern="MM/dd/yyyy" />
-                </h:outputText>
-            </p:panelGrid>
-        </p:dialog>
+
     </h:form>
 
 </ui:composition>
