--- a/src/main/webapp/views/IndicePromedioGastoPorDepreciacion/List.xhtml
+++ b/src/main/webapp/views/IndicePromedioGastoPorDepreciacion/List.xhtml
@@ -9,10 +9,10 @@
                 xmlns:composite="http://java.sun.com/jsf/composite"
 
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <h2 align="center"> Indice/Promedio de gasto por Depreciacion de equipo por Area Dentro de la Institucion</h2>
+    
     <h:form id="form">
-
         <div align="center" style="border: 1px black solid">
+            <h2 align="center"> Indice/Promedio de gasto por Depreciacion de equipo por Area Dentro de la Institucion</h2>
             <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
 
             <p:panelGrid  columns="2" columnClasses="column">
@@ -30,9 +30,9 @@
             <p:growl id="msgs" showDetail="true" />
             <br/> <br/>
 
-            <h:panelGrid columns="2" >
-                
-                 <p:column>
+            <h:panelGrid columns="2" cellpadding="5" >
+
+                <p:column>
                     <p:outputLabel value="Area Hospitalaria" for="area" />
                 </p:column>
                 <p:column>
@@ -41,7 +41,7 @@
                         <f:selectItems value="#{comparativoDeGastosReparacionManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
                     </p:selectOneMenu>
                 </p:column>
-              
+
                 <p:column>
                     <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
                     <span>&nbsp;</span>
@@ -68,20 +68,20 @@
 
             <br/> <br/>
 
-            <br/><br/>
-            <p:commandButton value="Aceptar" update="msgs" actionListener="#{gastoDepreciacionEquipoManagedBean.click}" icon="ui-icon-check"  />
-            <br/><br/>
+
+                <h:panelGrid columns="2"  cellpadding="5">
+                <f:facet name="footer">
+                    <div class="footer-section">
+                        <p:commandButton value="Aceptar" update="msgs" actionListener="#{gastoDepreciacionEquipoManagedBean.click}" icon="ui-icon-check"  />                        
+                        <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                        <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                    </div>
+                </f:facet>
+            </h:panelGrid>
 
         </div>
 
-        <p:dialog modal="true" resizable="false" header="Values" widgetVar="dlg" showEffect="fold">
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
-                <h:outputText value="Event:" />
-                <h:outputText value="#{gastoDepreciacionEquipoManagedBean.date2}">
-                    <f:convertDateTime pattern="MM/dd/yyyy" />
-                </h:outputText>
-            </p:panelGrid>
-        </p:dialog>
+
     </h:form>
 
 </ui:composition>
