exportacion de procesos pantalla controller

--- a/src/main/webapp/views/ExportacionDeProcesos/index.xhtml
+++ b/src/main/webapp/views/ExportacionDeProcesos/index.xhtml
@@ -7,7 +7,7 @@
                 template="/WEB-INF/templates/commonLayout.xhtml">
 
     <ui:define name="title">
-        <h:outputText value="Comparativo de tiempo de vida Util entre los Diferentes Equipos del Mismo Tipo."/>
+        <h:outputText value="Exportación de los Procesos de Proyeccion y Tazas a Formato Matriz"/>
     </ui:define>
 
     <ui:define name="content">
